@@ -1,5 +1,6 @@
 package tools.jackson.databind;
 
+import java.io.Serial;
 import java.util.*;
 
 import tools.jackson.core.JacksonException;
@@ -52,6 +53,7 @@ public abstract class InjectableValues
         extends InjectableValues
         implements java.io.Serializable
     {
+        @Serial
         private static final long serialVersionUID = 1L;
 
         protected String _validateKey(DeserializationContext ctxt, Object valueId,
@@ -60,9 +62,8 @@ public abstract class InjectableValues
         {
             if (!(valueId instanceof String)) {
                 throw ctxt.missingInjectableValueException(
-                        String.format(
-                        "Unsupported injectable value id type (%s), expecting String",
-                        ClassUtil.classNameOf(valueId)),
+                        "Unsupported injectable value id type (%s), expecting String".formatted(
+                                ClassUtil.classNameOf(valueId)),
                         valueId, forProperty, beanInstance);
             }
             return (String) valueId;
@@ -96,8 +97,8 @@ public abstract class InjectableValues
                 return null;
             }
             throw ctxt.missingInjectableValueException(
-                    String.format("No injectable value with id '%s' found (for property '%s')",
-                    key, forProperty.getName()),
+                    "No injectable value with id '%s' found (for property '%s')".formatted(
+                            key, forProperty.getName()),
                     key, forProperty, beanInstance);
         }
     }
@@ -106,6 +107,7 @@ public abstract class InjectableValues
         extends Base
         implements java.io.Serializable
     {
+        @Serial
         private static final long serialVersionUID = 1L;
 
         final static Empty INSTANCE = new Empty();
@@ -135,6 +137,7 @@ public abstract class InjectableValues
         extends Base
         implements java.io.Serializable
     {
+        @Serial
         private static final long serialVersionUID = 1L;
 
         protected final Map<String,Object> _values;
