@@ -113,8 +113,7 @@ public class DurationDeserializer extends JSR310DeserializerBase<Duration>
                 unitConverter = DurationUnitConverter.from(pattern);
                 if (unitConverter == null) {
                     ctxt.reportBadDefinition(getValueType(ctxt),
-                            String.format(
-                                    "Bad 'pattern' definition (\"%s\") for `Duration`: expected one of [%s]",
+                            "Bad 'pattern' definition (\"%s\") for `Duration`: expected one of [%s]".formatted(
                                     pattern, DurationUnitConverter.descForAllowed()));
                 }
             }
@@ -144,7 +143,7 @@ public class DurationDeserializer extends JSR310DeserializerBase<Duration>
                     result = DecimalUtils.extractSecondsAndNanos(value, Duration::ofSeconds, false);
                 } catch (DateTimeException | ArithmeticException e) {
                     throw DateTimeParseException.from(parser,
-                            String.format("Failed to deserialize %s from decimal value %s: %s",
+                            "Failed to deserialize %s from decimal value %s: %s".formatted(
                                     handledType().getName(), value, e.getMessage()),
                             value.toString(), handledType(), e);
                 }
