@@ -162,9 +162,9 @@ public class LocalTimeDeserializer extends JSR310DateTimeDeserializerBase<LocalT
                     }
                 } catch (DateTimeException | ArithmeticException e) {
                     throw DateTimeParseException.from(p,
-                            String.format("Failed to deserialize %s from array value [%d,%d,...]: %s",
+                            "Failed to deserialize %s from array value [%d,%d,...]: %s".formatted(
                                     handledType().getName(), hour, minute, e.getMessage()),
-                            String.format("[%d,%d,...]", hour, minute),
+                            "[%d,%d,...]".formatted(hour, minute),
                             handledType(), e);
                 }
             } else {
