@@ -300,8 +300,7 @@ public class TreeTraversingParser
         if (!node.canConvertToShort()) {
             String desc = _longIntegerDesc(node.asString());
             if (!node.canConvertToExactIntegral()) {
-                throw _constructInputCoercion(String.format(
-"Numeric value (%s) of `%s` has fractional part; cannot convert to `short`",
+                throw _constructInputCoercion("Numeric value (%s) of `%s` has fractional part; cannot convert to `short`".formatted(
                         desc, node.getClass().getSimpleName()),
                     node.asToken(), Integer.TYPE);
             }
@@ -317,11 +316,10 @@ public class TreeTraversingParser
         if (!node.canConvertToInt()) {
             // [databind#5309] Misleading exception message for DoubleNode to `int` value conversion
             if (!node.canConvertToExactIntegral()) {
-                throw _constructInputCoercion(String.format(
-"Numeric value (%s) of `%s` has fractional part; cannot convert to `int`",
-                            _longIntegerDesc(node.asString()),
-                            node.getClass().getSimpleName()
-                        ),
+                throw _constructInputCoercion("Numeric value (%s) of `%s` has fractional part; cannot convert to `int`".formatted(
+                        _longIntegerDesc(node.asString()),
+                        node.getClass().getSimpleName()
+                ),
                         node.asToken(), Integer.TYPE);
             }
             // otherwise assume range overflow
@@ -358,11 +356,10 @@ public class TreeTraversingParser
         if (!node.canConvertToLong()) {
             // [databind#5309] Misleading exception message for DoubleNode to `long` value conversion
             if (!node.canConvertToExactIntegral()) {
-                throw _constructInputCoercion(String.format(
-"Numeric value (%s) of `%s` has fractional part; cannot convert to `long`",
-                            _longIntegerDesc(node.asString()),
-                            node.getClass().getSimpleName()
-                        ),
+                throw _constructInputCoercion("Numeric value (%s) of `%s` has fractional part; cannot convert to `long`".formatted(
+                        _longIntegerDesc(node.asString()),
+                        node.getClass().getSimpleName()
+                ),
                         node.asToken(), Long.TYPE);
             }
             // otherwise assume range overflow
